--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>roblox-terminal</title>
 </head>
 <body>
-    <button id=""></button>
+    <button id="enable">Aktif et</button>
     <script>
         
     </script>
